--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<title>| Lab-3_Task |</title>
+	<title>| Gallery |</title>
 	
 	<link rel="stylesheet" href="style.css" />
 	
